Fix z-index issue

--- a/css/viz.css
+++ b/css/viz.css
@@ -89,6 +89,7 @@ line {
 	padding: 5px;
 	pointer-events: none;
 	font-size: 12px;
+	z-index:15;
 }
 #tip {
 	position: absolute;
@@ -96,6 +97,7 @@ line {
 	border: 1px solid rgb(128,128,128,.5);
 	text-align: center;
 	padding: 5px;
+	z-index:15;
 	pointer-events: none
 }
 .hidden, .not-drawn {
